; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/q3_ui/extr_ui_gameinfo.c_UI_InitGameinfo.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/q3_ui/extr_ui_gameinfo.c_UI_InitGameinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [12 x i8] c"fs_restrict\00", align 1
@ui_numSpecialSinglePlayerArenas = common dso_local global i64 0, align 8
@ui_numSinglePlayerArenas = common dso_local global i32 0, align 4
@qtrue = common dso_local global i32 0, align 4
@uis = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@qfalse = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @UI_InitGameinfo() #0 {
  %1 = call i32 (...) @UI_InitMemory()
  %2 = call i32 (...) @UI_LoadArenas()
  %3 = call i32 (...) @UI_LoadBots()
  %4 = call i64 @trap_Cvar_VariableValue(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %12, label %6

6:                                                ; preds = %0
  %7 = load i64, i64* @ui_numSpecialSinglePlayerArenas, align 8
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %6
  %10 = load i32, i32* @ui_numSinglePlayerArenas, align 4
  %11 = icmp eq i32 %10, 4
  br i1 %11, label %12, label %14

12:                                               ; preds = %9, %0
  %13 = load i32, i32* @qtrue, align 4
  store i32 %13, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @uis, i32 0, i32 0), align 4
  br label %16

14:                                               ; preds = %9, %6
  %15 = load i32, i32* @qfalse, align 4
  store i32 %15, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @uis, i32 0, i32 0), align 4
  br label %16

16:                                               ; preds = %14, %12
  ret void
}

declare dso_local i32 @UI_InitMemory(...) #1

declare dso_local i32 @UI_LoadArenas(...) #1

declare dso_local i32 @UI_LoadBots(...) #1

declare dso_local i64 @trap_Cvar_VariableValue(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
